Revision history for Perl module URI::Find.

0.11 Thu Jul 26 14:43:49 EDT 2001
    - Michael passed the module to Roderick for maintenance.
    - Improve test suite.
    - Tweak URI::Find::Schemeless not to find Foo.p[ml].

0.10  Mon Jul 10 20:14:08 EDT 2000
    - Rearchitected the internals to allow simple subclassing
    - Added URI::Find::Schemeless (thanks Roderick)

0.04  Sat Feb 26 09:05:11 GMT 2000
    - Added # to the uric set of characters so HTML anchors are caught.

0.03  Tue Feb  1 16:15:22 EST 2000
    - Added some heuristic discussion to the docs.
    - Added some heuristics to avoid picking up perl module names
    - Improved schemeless URI heuristic to avoid picking up
      usenet board names.
    - Handling the <URL:...> case better as suggested in RFC 2396 Apdx E
    - Added ; to the cruft heuristic

0.02  Tue Feb  1 13:11:56 EST 2000
    - Added heuristic to handle 'URL:http://www.foo.com'
    - Added heuristic to handle trailing quotes.

0.01  Mon Jan 31 19:12:23 EST 2000
    - First working version released to CPAN.