@@ -21,3 +21,5 @@ AUTHOR
 
 
 See the INSTALL document for more details.
+
+$Id: README,v 1.4 2001/07/27 12:13:40 roderick Exp $
